--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -52,3 +52,10 @@
     border: 4px solid tomato;
     padding: 2px;
 }
+
+@media (max-width: 750px){
+    .explore-menu-text{
+        max-width: 100%;
+        font-size: 14px;
+    }
+}
